--- a/src/makefile
+++ b/src/makefile
@@ -6,7 +6,7 @@ LINKER_FLAGS = -lSDL2 -lSDL2_image -lSDL2_ttf -lSDL2_mixer -lSDL2_net
 
 GAME = main.cpp
 
-AUX = game.cpp
+AUX = game.cpp TextureManager.cpp
 
 GAME_NAME = mygame
 
